tests/snapshots/snapshot_tests__crash_recovery_metadata.snap
---
source: tests/snapshot_tests.rs
expression: metadata
---
Metadata {
    event_count: None,
    drop_count: None,
}
