tests/snapshots/snapshot_tests__empty_finished_metadata.snap
---
source: tests/snapshot_tests.rs
expression: metadata
---
Metadata {
    event_count: Some(
        0,
    ),
    drop_count: Some(
        0,
    ),
}
