tests/snapshots/snapshot_tests__error_bad_magic.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
header error: invalid wPRF magic bytes
