tests/snapshots/snapshot_tests__error_payload_too_large.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
TLV payload too large: type=1, length=20000000
