tests/snapshots/snapshot_tests__error_unexpected_payload_size.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
unexpected payload size for type 1: expected 40, got 30
