tests/snapshots/snapshot_tests__error_unknown_record_type.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
unknown TLV record type: 255
