tests/snapshots/snapshot_tests__error_unsupported_version.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
header error: unsupported wPRF version: 99
