tests/snapshots/snapshot_tests__snapshot_dot_empty_graph.snap
---
source: tests/snapshot_tests.rs
expression: dot_output
---
digraph wperf {
    rankdir=LR;
    node [shape=box];
}
